--- a/services/user/config/config.yaml
+++ b/services/user/config/config.yaml
@@ -1,5 +1,8 @@
 env: "local"
-conn_string: "postgresql://postgres:postgres@localhost:5432/userdb?sslmode=disable"
+conn_string: "postgresql://postgres:postgres@localhost:5432/attendly?sslmode=disable"
 grpc:
   port: 44044
   timeout: 10h
+
+
+#attendly-atlfds-sgaagkj-sfdgsdfgsd
