--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -6,3 +6,8 @@ plugins:
   - plugin: go-grpc
     out: gen/go
     opt: paths=source_relative
+  - plugin: grpc-gateway
+    out: gen/go
+    opt: paths=source_relative
+  - plugin: openapiv2
+    out: gen/openapiv2
