--- a/services/group/Dockerfile
+++ b/services/group/Dockerfile
@@ -1,11 +1,23 @@
-FROM golang:1.24
+FROM golang:1.24 AS builder
 
 WORKDIR /app
 
+COPY go.mod go.sum ./
+RUN go mod download
+
 COPY . .
 
-WORKDIR /app/services/group
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o group ./services/group/cmd/main.go
 
-RUN go build -o group ./cmd/main.go
+FROM alpine:latest
+
+RUN apk --no-cache add ca-certificates
+
+WORKDIR /app
+
+COPY --from=builder /app/group .
+COPY --from=builder /app/services/group/internal/migrations /app/internal/migrations
+
+EXPOSE 50052
 
 CMD ["./group"]
