--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -5,9 +5,9 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY user .
+COPY . .
 
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o user ./services/user/cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o auth ./services/auth/cmd/main.go
 
 FROM alpine:latest
 
@@ -15,9 +15,9 @@ RUN apk --no-cache add ca-certificates
 
 WORKDIR /app
 
-COPY --from=builder /app/user .
-COPY --from=builder /app/services/user/internal/migrations /app/internal/migrations
+COPY --from=builder /app/auth .
+COPY --from=builder /app/services/auth/internal/migrations /app/internal/migrations
 
-EXPOSE 50051
+EXPOSE 50050
 
-CMD ["./user"]
+CMD ["./auth"]
