--- a/services/qr/Dockerfile
+++ b/services/qr/Dockerfile
@@ -1,11 +1,26 @@
-FROM golang:1.24
+FROM golang:1.24 AS builder
+
+RUN apt-get update && apt-get install -y \
+    librdkafka-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
+COPY go.mod go.sum ./
+RUN go mod download
+
 COPY . .
 
-WORKDIR /app/services/qr
+RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o qr ./services/qr/cmd/main.go
 
-RUN go build -o qr ./cmd/main.go
+FROM debian:bookworm-slim
+
+RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /app
+
+COPY --from=builder /app/qr .
+
+EXPOSE 50054
 
 CMD ["./qr"]
