--- a/services/group/Dockerfile
+++ b/services/group/Dockerfile
@@ -9,9 +9,10 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY services/group ./services/group
+COPY internal/shared ./internal/shared
 
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o group ./services/group/cmd/main.go
+RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o bin/group ./services/group/cmd/main.go
 
 FROM debian:bookworm-slim
 
@@ -19,8 +20,8 @@ RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/
 
 WORKDIR /app
 
-COPY --from=builder /app/group .
-COPY --from=builder /app/services/group/internal/migrations /app/internal/migrations
+COPY --from=builder /app/bin/group .
+COPY --from=builder /app/services/group/internal/migrations ./internal/migrations
 
 EXPOSE 50052
 
