--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -9,9 +9,11 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY services/auth ./services/auth
+COPY internal/shared ./internal/shared
+COPY proto ./proto
 
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o auth ./services/auth/cmd/main.go
+RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o bin/auth ./services/auth/cmd/main.go
 
 FROM debian:bookworm-slim
 
@@ -19,8 +21,8 @@ RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/
 
 WORKDIR /app
 
-COPY --from=builder /app/auth .
-COPY --from=builder /app/services/auth/internal/migrations /app/internal/migrations
+COPY --from=builder /app/bin/auth .
+COPY --from=builder /app/services/auth/internal/migrations ./internal/migrations
 
 EXPOSE 50050
 
