--- a/services/qr/Dockerfile
+++ b/services/qr/Dockerfile
@@ -9,9 +9,10 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY . .
+COPY services/qr ./services/qr
+COPY internal/shared ./internal/shared
 
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o qr ./services/qr/cmd/main.go
+RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o bin/qr ./services/qr/cmd/main.go
 
 FROM debian:bookworm-slim
 
@@ -19,7 +20,7 @@ RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/
 
 WORKDIR /app
 
-COPY --from=builder /app/qr .
+COPY --from=builder /app/bin/qr .
 
 EXPOSE 50054
 
