--- a/services/auth/Dockerfile
+++ b/services/auth/Dockerfile
@@ -1,23 +1,19 @@
 FROM golang:1.24 AS builder
 
-RUN apt-get update && apt-get install -y \
-    librdkafka-dev \
-    && rm -rf /var/lib/apt/lists/*
-
 WORKDIR /app
 
 COPY go.mod go.sum ./
 RUN go mod download
 
-COPY services/auth ./services/auth
-COPY internal/shared ./internal/shared
+COPY services/auth/cmd/ ./services/auth/cmd/
+COPY services/auth/internal/ ./services/auth/internal/
+COPY shared ./shared/
 COPY proto ./proto
 
-RUN CGO_ENABLED=1 GOOS=linux GOARCH=amd64 go build -tags netgo -o bin/auth ./services/auth/cmd/main.go
+RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+    go build -ldflags="-s -w" -o bin/auth ./services/auth/cmd/main.go
 
-FROM debian:bookworm-slim
-
-RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/*
+FROM alpine:3.20
 
 WORKDIR /app
 
