--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - kafka2
       - kafka3
     ports:
-      - "8080:8080"
+      - "8081:8080"
     environment:
       - KAFKA_CLUSTERS_0_NAME=dev-cluster
       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka1:9092,kafka2:9092,kafka3:9092
@@ -206,6 +206,20 @@ services:
       interval: 5s
       timeout: 3s
       retries: 5
+
+  gateway:
+    build:
+      context: .
+      dockerfile: services/api-gateway/Dockerfile
+    depends_on:
+      - user
+      - auth
+      - group
+      - qr
+    ports:
+      - "8080:8080"
+    networks:
+      - kafka-net
 
 volumes:
   kafka1_data:
